# desktop-tanaw

./: .dockerignore  .gitignore  Dockerfile  architecture.md  electron-builder.json5  index.html  package-lock.json  package.json  vite.config.ts
electron/: electron-env.d.ts  main.ts  (+1 more)
ml-service/: main.py  pyproject.toml
ml-service/app/: __init__.py  main.py
ml-service/app/camera/: __init__.py  auth.py  camera_manager.py  stream_reader.py
ml-service/app/config/: __init__.py  camera_config.py
ml-service/app/counting/: __init__.py  geometry.py  tripwire_counter.py
ml-service/app/detection/: __init__.py  tanaw_bytetrack.yaml  tanaw_bytetrack_accelerated.yaml  yolo_detector.py
ml-service/app/identity/: __init__.py  unique_visitor_registry.py
ml-service/app/reid/: __init__.py  appearance_buffer.py  async_worker.py  person_reid.py
ml-service/app/storage/: __init__.py  local_metrics_store.py  session_store.py
ml-service/app/tracking/: __init__.py  identity_resolver.py
ml-service/evaluation/: README.md
ml-service/models/: person_reid_cpu.onnx
ml-service/models/yolov8n_480_openvino_model/: metadata.yaml  yolov8n_480.xml
ml-service/models/yolov8n_openvino_model/: metadata.yaml  yolov8n.xml
ml-service/scripts/: evaluate_tracking.py  export_person_reid_onnx.py  replay_tracking.py
ml-service/tests/: test_camera_config_validation.py  test_camera_manager_session.py  test_identity_resolver.py  test_local_metrics_store.py  test_reid_components.py  test_tracking_evaluator.py  test_tripwire_counter.py  test_unique_visitor_registry.py  test_yolo_detector.py
(+89 files in other folders)
